# Pygame

./: README.md  pyproject.toml
game/: main.py
