[project]
name = "pygame-test"
version = "0.1.0"
description = ""
authors = [
    {name = "int422",email = "you@example.com"},
    {name = "kikyuoo",email = "you@example.com"},
    {name = "makarooz",email = "you@example.com"}
]
license = {text = "MIT"}
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "pygame (>=2.6.1,<3.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
packages = [{ include = "game" }]

[tool.poetry.scripts]
game = "game.main:main"
